# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8081/api/v1/",
+            "url": "http://localhost:8081/annaSock/v1/",
             "description": "Serveur Local"
         },
 
@@ -83,7 +83,7 @@
                 ]
             }
         },
-        "/api/comptes/{compte}": {
+        "/comptes/{compte}": {
             "get": {
                 "tags": [
                     "Comptes"
